Version 1.2.3
- Should now work on all architectures.

Version 1.2.2
- Fixed error caused by switching to std::filesystem usage.

Version 1.2.0
- Added istream class

Version 1.2.0
- Added streambuf class
- Added unit tests

Version 1.1.0

- New interface file, now no longer throws exception when a
  resource is not found. So you should check the validity
  using e.g. operator bool.

Version 1.0.0