@@ -1,5 +1,6 @@
 Version 1.2.3
 - Should now work on all architectures.
+- replaced cpu and eabi flags with more generic --elf-xxx options.
 
 Version 1.2.2
 - Fixed error caused by switching to std::filesystem usage.
